added commands for changing the skins and capes of all players, with support for specifying multiple skins to be evenly distributed